--- a/platforms/android/src/main/assets/app/tns_modules/@angular/animations/package.json
+++ b/platforms/android/src/main/assets/app/tns_modules/@angular/animations/package.json
@@ -10,7 +10,7 @@
         "spec": ">=4.1.0 <4.2.0",
         "type": "range"
       },
-      "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial"
+      "E:\\CharacterSheets\\CharacterSheetNativeScript"
     ]
   ],
   "_from": "@angular/animations@>=4.1.0 <4.2.0",
@@ -38,13 +38,13 @@
     "type": "range"
   },
   "_requiredBy": [
-    "/nativescript-template-ng-tutorial"
+    "/"
   ],
   "_resolved": "https://registry.npmjs.org/@angular/animations/-/animations-4.1.3.tgz",
   "_shasum": "6e89a1e0fbfd6d0e90be4f2ae190aac67f83a411",
   "_shrinkwrap": null,
   "_spec": "@angular/animations@~4.1.0",
-  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial",
+  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript",
   "author": {
     "name": "angular"
   },
