--- a/platforms/android/src/main/assets/app/tns_modules/@angular/common/package.json
+++ b/platforms/android/src/main/assets/app/tns_modules/@angular/common/package.json
@@ -10,7 +10,7 @@
         "spec": ">=4.1.0 <4.2.0",
         "type": "range"
       },
-      "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial"
+      "E:\\CharacterSheets\\CharacterSheetNativeScript"
     ]
   ],
   "_from": "@angular/common@>=4.1.0 <4.2.0",
@@ -38,13 +38,13 @@
     "type": "range"
   },
   "_requiredBy": [
-    "/nativescript-template-ng-tutorial"
+    "/"
   ],
   "_resolved": "https://registry.npmjs.org/@angular/common/-/common-4.1.3.tgz",
   "_shasum": "e7c4791e32131cf74c239428c2a67daab2eef017",
   "_shrinkwrap": null,
   "_spec": "@angular/common@~4.1.0",
-  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial",
+  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript",
   "author": {
     "name": "angular"
   },
