--- a/platforms/android/src/main/assets/app/tns_modules/@angular/compiler/package.json
+++ b/platforms/android/src/main/assets/app/tns_modules/@angular/compiler/package.json
@@ -10,7 +10,7 @@
         "spec": ">=4.1.0 <4.2.0",
         "type": "range"
       },
-      "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial"
+      "E:\\CharacterSheets\\CharacterSheetNativeScript"
     ]
   ],
   "_from": "@angular/compiler@>=4.1.0 <4.2.0",
@@ -38,13 +38,13 @@
     "type": "range"
   },
   "_requiredBy": [
-    "/nativescript-template-ng-tutorial"
+    "/"
   ],
   "_resolved": "https://registry.npmjs.org/@angular/compiler/-/compiler-4.1.3.tgz",
   "_shasum": "d2dd30853b0cf4a54758b4a314632c231f9c94c3",
   "_shrinkwrap": null,
   "_spec": "@angular/compiler@~4.1.0",
-  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial",
+  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript",
   "author": {
     "name": "angular"
   },
