--- a/platforms/android/src/main/assets/app/tns_modules/@angular/forms/package.json
+++ b/platforms/android/src/main/assets/app/tns_modules/@angular/forms/package.json
@@ -10,7 +10,7 @@
         "spec": ">=4.1.0 <4.2.0",
         "type": "range"
       },
-      "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial"
+      "E:\\CharacterSheets\\CharacterSheetNativeScript"
     ]
   ],
   "_from": "@angular/forms@>=4.1.0 <4.2.0",
@@ -38,13 +38,13 @@
     "type": "range"
   },
   "_requiredBy": [
-    "/nativescript-template-ng-tutorial"
+    "/"
   ],
   "_resolved": "https://registry.npmjs.org/@angular/forms/-/forms-4.1.3.tgz",
   "_shasum": "380ab4c3af84c5d1d748c2a7d04151c7dc8e4982",
   "_shrinkwrap": null,
   "_spec": "@angular/forms@~4.1.0",
-  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial",
+  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript",
   "author": {
     "name": "angular"
   },
