--- a/platforms/android/src/main/assets/app/tns_modules/@angular/router/package.json
+++ b/platforms/android/src/main/assets/app/tns_modules/@angular/router/package.json
@@ -10,7 +10,7 @@
         "spec": ">=4.1.0 <4.2.0",
         "type": "range"
       },
-      "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial"
+      "E:\\CharacterSheets\\CharacterSheetNativeScript"
     ]
   ],
   "_from": "@angular/router@>=4.1.0 <4.2.0",
@@ -38,13 +38,13 @@
     "type": "range"
   },
   "_requiredBy": [
-    "/nativescript-template-ng-tutorial"
+    "/"
   ],
   "_resolved": "https://registry.npmjs.org/@angular/router/-/router-4.1.3.tgz",
   "_shasum": "ddafd46ae7ccc8b1f74904ffb45f394e44625216",
   "_shrinkwrap": null,
   "_spec": "@angular/router@~4.1.0",
-  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial",
+  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript",
   "author": {
     "name": "angular"
   },
