--- a/platforms/android/src/main/assets/app/tns_modules/nativescript-angular/package.json
+++ b/platforms/android/src/main/assets/app/tns_modules/nativescript-angular/package.json
@@ -10,7 +10,7 @@
         "spec": ">=3.0.0 <3.1.0",
         "type": "range"
       },
-      "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial"
+      "E:\\CharacterSheets\\CharacterSheetNativeScript"
     ]
   ],
   "_from": "nativescript-angular@>=3.0.0 <3.1.0",
@@ -38,13 +38,13 @@
     "type": "range"
   },
   "_requiredBy": [
-    "/nativescript-template-ng-tutorial"
+    "/"
   ],
   "_resolved": "https://registry.npmjs.org/nativescript-angular/-/nativescript-angular-3.0.0.tgz",
   "_shasum": "401c5eae895c22a44010c16f443910d2aa5af6ee",
   "_shrinkwrap": null,
   "_spec": "nativescript-angular@~3.0.0",
-  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial",
+  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript",
   "author": {
     "name": "NativeScript Team"
   },
