--- a/platforms/android/src/main/assets/app/tns_modules/reflect-metadata/package.json
+++ b/platforms/android/src/main/assets/app/tns_modules/reflect-metadata/package.json
@@ -10,7 +10,7 @@
         "spec": ">=0.1.8 <0.2.0",
         "type": "range"
       },
-      "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial"
+      "E:\\CharacterSheets\\CharacterSheetNativeScript"
     ]
   ],
   "_from": "reflect-metadata@>=0.1.8 <0.2.0",
@@ -38,14 +38,14 @@
     "type": "range"
   },
   "_requiredBy": [
-    "/nativescript-angular",
-    "/nativescript-template-ng-tutorial"
+    "/",
+    "/nativescript-angular"
   ],
   "_resolved": "https://registry.npmjs.org/reflect-metadata/-/reflect-metadata-0.1.10.tgz",
   "_shasum": "b4f83704416acad89988c9b15635d47e03b9344a",
   "_shrinkwrap": null,
   "_spec": "reflect-metadata@~0.1.8",
-  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript\\node_modules\\nativescript-template-ng-tutorial",
+  "_where": "E:\\CharacterSheets\\CharacterSheetNativeScript",
   "author": {
     "name": "Ron Buckton",
     "email": "ron.buckton@microsoft.com",
